# p2c-mcts-core

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  examples.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_crafting.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/base_items/: base_items.json
config/currencies/: currency_items.json
config/modifiers/: modifiers.json
src/: __init__.py  config.py  main.py
src/adapters/: __init__.py
src/adapters/api/: __init__.py  dependencies.py  main.py  mappers.py  models.py  routes.py
src/application/: __init__.py
src/application/ports/: input_ports.py
src/application/use_cases/: crafting_mcts_service.py  mcts_service.py
src/core/: __init__.py  optimizer.py
src/core/mcts/: __init__.py  node.py  policies.py  search.py
src/core/mdp/: __init__.py  entities.py  reward.py  transition.py
src/domain/: __init__.py
src/domain/entities/: crafting.py  mcts_node.py  mdp.py
src/infrastructure/: config_loader.py
src/infrastructure/adapters/api/: crafting_models.py  crafting_routes.py  models.py  routes.py
src/infrastructure/adapters/persistence/: in_memory_mdp_repository.py
src/ports/: __init__.py  optimizer_port.py
tests/fixtures/: __init__.py  crafting_fixtures.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_mcts_node.py  test_mcts_search.py  test_mcts_service.py  test_mdp.py  test_mdp_entities.py  test_mdp_reward.py  test_mdp_transition.py
